<resources>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="user_login">User Login</string>
    <string name="login">LOGIN</string>
    <string name="not_have_an_account_signup">Not have an account? Signup</string>
    <string name="forgot_password">Forgot Password?</string>

    <string-array name="start_term_array">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>

    <string name="start_term_spinner_prompt">Select your Start Term</string>
    <string name="welcome_message">Chat and Network with people from the same country with you going to Dal this term. \n\nAlso take advantages of our help tools like the reminder, chat bots etc.</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="sendButton">Send</string>
    <string name="inputText">Input Text</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">DalConnect</string>
    <string name="direction">Direction</string>
    <string name="link">Link</string>
    <string name="title_map_activity">Location Helper</string>
    <string-array name="buildings">
        <item>LSC,44.6357336,-63.5939558</item>
        <item>LSC-PSYCHOLOGY,44.6357336,-63.5939558</item>
        <item>LSC-COMMON AREA,44.6357336,-63.5939558</item>
        <item>Kenneth c Rowe,44.637006,-63.5882477</item>
        <item>KILLAM LIBRARY,44.6374177,-63.5921144</item>
        <item>Mona Campbell Building,44.6389669,-63.5905979</item>
        <item>Sir James Dunn Law Library,44.6383112,-63.5875586</item>
        <item>Studley Weldon Law,44.638173,-63.587125</item>
        <item>Henry Hicks Building,44.636494,-63.593137</item>
        <item>H.R. THEAKSTON, 44.638567,-63.589165</item>
        <item>Collaborative Health Education Building, 44.639567, -63.582870</item>
        <item>Sexton B BUILDING, 44.644674, -63.572344</item>
        <item>King's KING'S NEW ACAD ARCHIB, 44.637323, -63.595433</item>
        <item>Other BETHUNE BLDG, 44.639328, -63.580300</item>
    </string-array>
</resources>
