<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:padding="1dp"
            android:scaleType="center"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/logo" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/black"
            android:text="@string/user_login"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/email_address"
            android:textColorHint="@android:color/black"
            android:maxLines="1"
            android:drawableStart="@drawable/icon2"
            android:layout_marginTop="4dp"
            android:layout_margin="15dp"
            android:textColor="@android:color/black"/>
        <!-- <view
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#f9d7db" />-->


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="@string/password"
            android:textColorHint="@android:color/black"
            android:maxLines="1"
            android:drawableStart="@drawable/lock"
            android:layout_marginTop="4dp"
            android:layout_margin="15dp"

            android:textColor="@android:color/black"/>
        <!--  <view
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="#f9d7db" />-->


        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textColor="@android:color/black"/>


        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSignup"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/not_have_an_account_signup"/>

        <Button
            android:id="@+id/btn_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="#ffa351" />


    </LinearLayout>










    <!-- Login Button -->



    <!-- Link to Login Screen -->


</LinearLayout>

    <!-- <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="20dp"
         android:visibility="gone" />-->

